apps/haenu/dev-musicbook-fe/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-musicbook-fe
  namespace: haenu
  labels:
    app: dev-musicbook-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-musicbook-fe
  template:
    metadata:
      labels:
        app: dev-musicbook-fe
    spec:
      containers:
      - name: dev-musicbook-fe
        image: hyeonwoo5342/dev-musicbook-fe:40
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: dockerhub-secret
