apps/haenu/dev-musicbook-fe/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-musicbook-fe-ingress
  namespace: haenu
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: musicbook.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dev-musicbook-fe
            port:
              number: 3000
